# RBCA

./: .keydb.conf  Cargo.toml  HANDBOOK.md  MIRGRATIONS.md  README.md  Rocket.toml  diesel.toml  docker-compose.yml
.cargo/: config.toml
crates/libs/adapter/: Cargo.toml
crates/libs/adapter/src/: amqp.rs  db.rs  lib.rs  redis.rs  settings.rs
crates/libs/entity/: Cargo.toml
crates/libs/entity/src/: entities.rs  lib.rs
crates/libs/entity/src/entities/: app_staff.rs  application.rs  key.rs  organization.rs  prelude.rs  user.rs
crates/libs/entity/src/event/: user.rs
crates/libs/orm-addons/: Cargo.toml
crates/libs/orm-addons/proc/: Cargo.toml
crates/libs/orm-addons/proc/src/entity/: filter.rs
crates/libs/orm-addons/src/: prelude.rs
crates/libs/orm-addons/src/prelude/: entity.rs
crates/libs/orm-util/: Cargo.toml
crates/libs/orm-util/proc-macro/: Cargo.toml
crates/libs/orm-util/proc-macro/src/: lib.rs
crates/libs/orm-util/proc-macro/src/entity/: filter.rs
crates/libs/orm-util/src/: lib.rs  prelude.rs
crates/libs/orm-util/src/prelude/: entity.rs
crates/libs/repository-amqp/: Cargo.toml
crates/libs/repository-amqp/src/: lib.rs  settings.rs
crates/libs/repository-amqp/src/event/: user.rs
crates/libs/repository-db/: Cargo.toml
crates/libs/repository-db/src/: app_staff.rs  application.rs  lib.rs  organization.rs  user.rs
crates/libs/repository-redis/: Cargo.toml
crates/libs/repository-redis/src/: lib.rs
crates/libs/rocket-util/: Cargo.toml
crates/libs/rocket-util/proc-macro/: Cargo.toml
crates/libs/rocket-util/proc-macro/src/: guard_permission.rs  lib.rs
crates/libs/rocket-util/src/: lib.rs
crates/libs/util/: Cargo.toml
crates/libs/util/proc/: Cargo.toml
crates/libs/util/proc-macro/: Cargo.toml
crates/libs/util/proc-macro/src/: enum_tool.rs  guard_permission.rs  lib.rs
crates/libs/util/proc-macro/src/enum_tool/: bool.rs
crates/libs/util/proc/src/: lib.rs
crates/libs/util/src/: auth.rs  bool.rs  crypto.rs  date.rs  guard.rs  jwt.rs  lib.rs  settings.rs  string.rs
crates/libs/util/src/auth/: basic.rs  jwt.rs
crates/libs/util/src/bool/: env.rs
crates/libs/util/src/crypto/: bcrypt.rs
crates/libs/util/src/date/: schema.rs
crates/services/api-server/: Cargo.toml
crates/services/api-server/src/: guard.rs  main.rs  query.rs  route.rs  schema.rs  usecase.rs
crates/services/api-server/src/guard/: self_user.rs  user.rs
crates/services/api-server/src/guard/staff/: user.rs
crates/services/api-server/src/query/: application.rs  organization.rs  user.rs
crates/services/api-server/src/route/: api.rs  core.rs
crates/services/api-server/src/route/api/: application.rs  auth.rs  delay.rs  organization.rs  self_user.rs  user.rs  user_staff.rs
crates/services/api-server/src/schema/: application.rs  auth.rs  base.rs  organization.rs  user.rs
crates/services/api-server/src/usecase/: application.rs  auth.rs  organization.rs  user.rs
crates/services/migration/: Cargo.toml
crates/services/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250110_205852_add_user_password.rs  m20250207_160853_del_org_add_app_key_upd_user.rs  m20250503_000001_create_tables.rs
