[workspace]
resolver = "2"
members = [
  # Services
  "crates/services/api-server",
  "crates/services/migration",

  # Libs
  "crates/libs/util",
  "crates/libs/entity",
  "crates/libs/adapter",
  "crates/libs/repository-db",
  "crates/libs/repository-redis",
  "crates/libs/repository-amqp",
  "crates/libs/orm-util",
  "crates/libs/rocket-util",

  # Macros
  "crates/libs/orm-util/proc-macro",
  "crates/libs/rocket-util/proc-macro",
  "crates/libs/util/proc-macro",
]

[workspace.dependencies]
# Crates
entity-lib = { path = "crates/libs/entity" }
migration = { path = "crates/services/migration" }
util-lib = { path = "crates/libs/util" }
repository-db-lib = { path = "crates/libs/repository-db" }
repository-redis-lib = { path = "crates/libs/repository-redis" }
repository-amqp-lib = { path = "crates/libs/repository-amqp" }
adapter-lib = { path = "crates/libs/adapter" }
orm-util-lib = { path = "crates/libs/orm-util" }
rocket-util-lib = { path = "crates/libs/rocket-util" }

# Cargo libs
base64 = "0.22"
sea-orm = { version = "1.1.3", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "postgres-array",
  "debug-print",
  "with-uuid",
  "with-json",
  "postgres-array",
] }
sea-orm-migration = "1.1"
sea-query = "0"
chrono = "0.4.39"
env-settings = "0.1.11"
env-settings-derive = "0.1.11"
env-settings-utils = "0.1.11"
once_cell = "1.20.2"
rocket = { version = "0.5.1", features = ["uuid", "tls", "json"] }
rocket-validation = "0.2"
rocket_okapi = { version = "0.9.0", features = [
  "preserve_order",
  "uuid",
  "swagger",
  "secrets",
] }
schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_valid = "1.0"
serde_json = "1.0"
serde_with = "3.12"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
time = { version = "0.3.37", features = ["macros", "serde-human-readable"] }
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
jsonwebtoken = "9.3"
async-trait = "0.1"
redis = { version = "^0.28", features = [
  "json",
  "cluster-async",
  "tokio-comp",
] }
proc-macro-error = "1"
lapin = "2.5.0"
bcrypt = "0.16"
darling = "0.20.10"
