[package]
name = "adapter-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env-settings = { workspace = true }
env-settings-derive = { workspace = true }
env-settings-utils = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
util-lib = { workspace = true }
lapin = { workspace = true }
