[package]
name = "repository-amqp-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lapin = { workspace = true }
adapter-lib = { workspace = true }
tokio = { workspace = true }
env-settings = { workspace = true }
env-settings-derive = { workspace = true }
env-settings-utils = { workspace = true }
util-lib = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
