[package]
name = "repository-redis-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
redis = { workspace = true }
adapter-lib = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_valid = { workspace = true }
