[package]
name = "util-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
util-lib-proc = { path = "./proc-macro" }
chrono = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
rocket_okapi = { workspace = true }
schemars = { workspace = true }
rocket = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
env-settings = { workspace = true }
env-settings-derive = { workspace = true }
env-settings-utils = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
