[package]
name = "orm-util-proc-macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
sea-orm = { workspace = true }
sea-query = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_valid = { workspace = true }
serde_with = { workspace = true }
proc-macro2 = { workspace = true }
