[package]
name = "rocket-util-proc-macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
util-lib = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-error = { workspace = true }
darling = { workspace = true }
